--- a/src/App.css
+++ b/src/App.css
@@ -127,11 +127,11 @@ nav {
 }
 
 #wrapper_p > p {
-  line-height: 1.5rem;
+  line-height: 1.8rem;
   text-indent: 2.5rem;
   letter-spacing: 0.05rem;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.1rem;
   background-color: #ede4e4;
   padding: 0rem 0.5rem 0rem 0.5rem;
   /* backdrop-filter: blur(20px); */
@@ -163,11 +163,11 @@ nav {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 100vh;
   gap: 8%;
 }
 
-#pro-title {
+#pro-title, #personal-pro-tag  {
   text-align: center;
   font-size: 2rem;
 }
@@ -190,8 +190,22 @@ nav {
 }
 
 #symvara {
-  width: 75%;
-  height: 70%;
+  width: 450px;
+  /* height: 70%; */
+  background-color: #fcfcfc;
+  border-radius: 1.2rem;
+  box-shadow: 3px 2px 2px black;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  overflow: auto;
+  padding: 5px 0 0 0;
+  gap: 4%;
+}
+
+#nuclear-sim {
+  width: 450%;
+  /* height: 70%; */
   background-color: #fcfcfc;
   border-radius: 1.2rem;
   box-shadow: 3px 2px 2px black;
@@ -327,29 +341,6 @@ hr {
 .todo-projects {
   cursor: url("./assets/hammer.jpg"), auto;
 }
-/* #nuclear-tip {
-  width: 100%;
-  height: 30%;
-  background-color: white;
-  transition: opacity 0.5s ease; 
-  opacity: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-bottom-left-radius: 2.5%;
-  border-bottom-right-radius: 2.5%;
-}
-
-#nuclear-tip:hover {
-  transition: opacity 1s ease; 
-  opacity: 1;
-  cursor: pointer;
-}
-
-#nuclear-tip > p {
-  text-align: center;
-  font-size: 1.5rem;
-} */
 
 /* How to have child commit actions when parent is hovered? */
 
