--- a/src/App.css
+++ b/src/App.css
@@ -56,8 +56,8 @@ nav {
 .title {
   width: 85vw;
   margin: 0px 0px 0px 2%;
-  font-size: 1.5rem;
-  letter-spacing: 0.85rem;
+  font-size: 1.8rem;
+  letter-spacing: 0.25rem;
   font-stretch: condensed;
 }
 
@@ -136,10 +136,12 @@ nav {
   background-color: #ede4e4;
   padding: 0rem 0.5rem 0rem 0.5rem;
   width: 100%;
+  /* border-radius: 0rem .5rem .5rem 0rem; */
 }
 
 #symvara,
-#nuclear-power-plant {
+#nuclear-power-plant,
+#kaizan {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -148,7 +150,7 @@ nav {
 
 #pro-title {
   font-size: 1.75rem;
-  letter-spacing: 0.3rem;
+  letter-spacing: 0.15rem;
   font-stretch: condensed;
 }
 
@@ -178,7 +180,8 @@ nav {
 }
 
 #symvara,
-#nuclear-power-plant {
+#nuclear-power-plant, 
+#kaizan {
   width: 40vw;
   height: auto;
   background-color: #fcfcfc;
@@ -187,13 +190,12 @@ nav {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  overflow: auto;
+  overflow: hidden;
   padding: 5px 0 0 0;
   gap: 4%;
 }
 
-#sym-title,
-#npp-title {
+.exp-title{
   font-size: 1.5rem;
   font-weight: 600;
   padding: 0 10px 0 0;
@@ -201,51 +203,43 @@ nav {
   padding: 0 0 5px 0;
 }
 
-#sym-range,
-#npp-range {
+.range {
   font-size: 1.1rem;
   color: #4a4848;
   text-align: center;
 }
 
-#sym-des-cont,
-#npp-des-cont {
+.des-cont {
   display: flex;
   justify-content: center;
 }
 
-#sym-des,
-#npp-des {
+.des {
   line-height: 1.5rem;
   letter-spacing: 0.05rem;
   padding: 0 5% 0 5%;
   text-align: center;
 }
 
-#sym-details-cont,
-#npp-details-cont {
+.details-cont {
   width: 80%;
 }
 
-#sym-details,
-#npp-details {
+.details {
   line-height: 1.5rem;
   letter-spacing: 0.05rem;
   padding: 0 5% 0 5%;
 }
 
-#sym-details > li,
-#npp-details > li {
+.details > li {
   margin: 0 0 0.5rem 0;
 }
 
-#sym-lan-cont,
-#npp-lan-cont {
+.lan-cont {
   width: 90%;
 }
 
-#sym-lan,
-#npp-lan {
+.lan {
   text-align: center;
   letter-spacing: 0.02rem;
   padding: 0 0 15px 0;
@@ -253,17 +247,21 @@ nav {
 
 #connect {
   display: flex;
-  width: 100%;
+  justify-content: space-around;
+  align-items: center;
   justify-content: center;
+  width: 100%;
   height: 20vh;
+  gap: 5%;
 }
 
 .resume {
   background-color: black;
   color: white;
-  padding: 12px 9px 12px 9px;
-  border-radius: 15%;
+  padding: 12px 9px;
+  border-radius: 1rem;
   transition: 0.5s;
+  min-height: 20px
 }
 
 .resume:hover {
