--- a/src/App.css
+++ b/src/App.css
@@ -61,22 +61,24 @@ nav {
 }
 
 .link-cont {
-  border-radius: 100%;
   width: 1.75rem;
   height: 1.75rem;
-  border: 3px solid #ede4e4;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.link-cont > * {
+  color: black
+}
+
 .link-cont:hover {
-  transform: scale(1.5);
+  transform: scale(2.0);
   transition: transform 0.5s ease;
 }
 
 .link-cont {
-  transform: scale(1.2);
+  transform: scale(1.5);
   transition: transform 0.5s ease;
 }
 
@@ -98,7 +100,8 @@ nav {
   width: 100%;
   gap: 2rem;
   border-radius: 1.2rem;
-  background-image: url("./assets/random_5.svg");
+  /* background-image: url("./assets/random_5.svg"); */
+  background-color: #7a7373;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -133,6 +136,14 @@ nav {
   background-color: #ede4e4;
   padding: 0rem 0.5rem 0rem 0.5rem;
   width: 60%;
+}
+
+#experience-title {
+  align-items: center;
+}
+
+#experience-title > p{
+  margin-right: 10px;
 }
 
 #symvara,
@@ -180,7 +191,6 @@ nav {
   flex-shrink: 0;  
   width: auto; 
   margin-right: 10px; 
-
 }
 
 #symvara,
@@ -211,8 +221,7 @@ nav {
 .range {
   font-size: 1.1rem;
   color: #4a4848;
-  /* color: blue; */
-  text-align: center;
+    text-align: center;
 }
 
 .des-cont {
@@ -275,5 +284,51 @@ nav {
   cursor: pointer;
 }
 
-@media (max-width) {
+@media (max-width: 1050px) {
+  #experience {
+    flex-direction: column; 
+    overflow-x: hidden;  
+    overflow-y: auto; 
+    scroll-snap-type: none;  
+  }
+
+  #experience > * {
+    scroll-snap-align: none; 
+    margin-right: 0;
+    margin-bottom: 0.5rem; 
+    width: 100%; 
+  }
+
+  #about-me {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+    width: 100%;
+    gap: 2rem;
+    border-radius: 1.2rem;
+    background-color: #ede4e4;
+  }
+
+  #image-me {
+    width: 60%;
+    height: 50%;
+  }
+
+  #wrapper_p {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  #wrapper_p > p {
+    /* background-color: white; */
+    width: 80%;
+    height: 50%;
+  }
 }
