--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ html {
   font-family: 'Work Sans', Arial, sans-serif;
 }
 body {
-  background-color: #ede4e4;
+  /* background-color: #ede4e4; */
   overflow-x: hidden;
 }
 
@@ -24,7 +24,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #ede4e4;
+  background-color: white;
   gap: 1.5rem;
 }
 
@@ -101,7 +101,7 @@ nav {
   gap: 2rem;
   border-radius: 1.2rem;
   /* background-image: url("./assets/random_5.svg"); */
-  background-color: #7a7373;
+  /* background-color: #EEEEEE       ; */
   /* background-repeat: no-repeat; */
   background-size: cover;
 }
@@ -121,21 +121,40 @@ nav {
   width: 40%;
   border-bottom-left-radius: 0.5rem;
   border-top-left-radius: 0.5rem;
-  background-color: green;
   justify-content: center;
   align-items: center;
+  background-image: url('/src/assets/ProfilePic1.JPG');
+  background-size: cover;
+  background-repeat: no-repeat;
   /* margin: 0.25rem 0 0 0; */
 }
 
-#wrapper_p > p {
+#p-tag {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+#info-title {
+  font-size: 2.5rem
+}
+
+#info {
+
   line-height: 1.8rem;
   text-indent: 2.5rem;
   letter-spacing: 0.05rem;
   text-align: center;
   font-size: 100%;
-  background-color: #ede4e4;
+  background-color: white;
   padding: 0rem 0.5rem 0rem 0.5rem;
-  width: 60%;
+}
+
+#info-title {
+align-items: center;
 }
 
 #experience-title {
@@ -308,7 +327,7 @@ nav {
     width: 100%;
     gap: 2rem;
     border-radius: 1.2rem;
-    background-color: #ede4e4;
+    /* background-color: #ede4e4; */
   }
 
   #image-me {
