--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap");
 
 html {
-  font-family: 'Work Sans', Arial, sans-serif;
+  font-family: "Work Sans", Arial, sans-serif;
 }
 body {
-  /* background-color: #ede4e4; */
   overflow-x: hidden;
 }
 
@@ -25,13 +24,10 @@ a {
   justify-content: center;
   align-items: center;
   background-color: white;
-  gap: 1.5rem;
 }
 
-/* #experience-cont, */
 #project-cont {
   width: 100vw;
-  /* height: 100vh; */
 }
 
 /* NAVIGATION */
@@ -39,51 +35,29 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   width: 100vw;
   height: 10vh;
-}
-
-#title-cont {
-  width: 80vw;
-}
-
-#side-nav-cont {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20%;
-  width: 20vw;
-}
-
-/* NAVIGATION CONTENT */
-
-.title {
-  width: 85vw;
-  margin: 0px 0px 0px 2%;
-  font-size: 2.0rem;
-  font-stretch: condensed;
+  gap: 2rem;
 }
 
 .link-cont {
-  width: 1.75rem;
-  height: 1.75rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.link-cont > * {
-  color: black
+.link-cont > a {
+  color: black;
 }
 
 .link-cont:hover {
-  transform: scale(2.0);
+  transform: scale(1.25);
   transition: transform 0.5s ease;
 }
 
 .link-cont {
-  transform: scale(1.5);
+  transform: scale(1);
   transition: transform 0.5s ease;
 }
 
@@ -112,13 +86,11 @@ nav {
   display: flex;
   height: 100%;
   width: 40%;
-  border-bottom-left-radius: 0.5rem;
-  border-top-left-radius: 0.5rem;
-  justify-content: center;
-  align-items: center;
   background-image: url('/src/assets/ProfilePic1.JPG');
-  background-size: cover;
+  background-size: 100%;
+  background-position:top; 
   background-repeat: no-repeat;
+  border-radius: 8px;
 }
 
 #p-tag {
@@ -133,12 +105,11 @@ nav {
 
 #info-title {
   font-size: 2.5rem;
-  text-align:center
+  text-align: center;
 }
 
 #info {
   line-height: 1.8rem;
-  text-indent: 2.5rem;
   letter-spacing: 0.05rem;
   text-align: center;
   font-size: 100%;
@@ -146,13 +117,17 @@ nav {
   padding: 0rem 0.5rem 0rem 0.5rem;
 }
 
+#project-title {
+  width: 100%;
+  margin: 3%;
 
-#experience-title {
-  align-items: center;
 }
 
-#experience-title > p{
-  margin-right: 10px;
+#project-title > p {
+  text-align: center;
+  font-size: 1.75rem;
+  letter-spacing: 0.15rem;
+  font-stretch: condensed;
 }
 
 #symvara,
@@ -165,63 +140,35 @@ nav {
   overflow-y: auto;
 }
 
-#pro-title {
-  font-size: 1.75rem;
-  letter-spacing: 0.15rem;
-  font-stretch: condensed;
-}
-
-#experience-title {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  margin: 5% 0 2% 0;
-}
-
 #experience {
   display: flex;
-  flex-direction: row; 
+  flex-direction: row;
   width: 100%;
-  gap: 5%;
-  overflow-y: hidden; 
-  padding: 0 10px 5px 10px;
-  box-sizing: border-box;
-  scroll-snap-type: x mandatory;
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
-}
-
-#experience::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
-}
-
-#experience > * {
-  scroll-snap-align: start; 
-  flex-shrink: 0;  
-  width: auto; 
-  margin-right: 10px; 
+  gap: 4%;
+  flex-wrap: wrap;
 }
 
 #symvara,
-#nuclear-power-plant, 
+#nuclear-power-plant,
 #kaizan {
-  width: 40vw;
+  width: 48%;
   height: fit-content;
-  background-color: #fcfcfc;
+  background-color: #ffffff;
   border-radius: 1.2rem;
-  box-shadow: 2px 2px 2px black;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   overflow: hidden;
-  padding: 5px 0 0 0;
+  margin: 0 0 2rem 0;
+  padding: 2% 0 0 0;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
   gap: 4%;
 }
 
-.exp-title{
+.exp-title {
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: 400;
   padding: 0 10px 0 0;
   text-align: center;
   padding: 0 0 5px 0;
@@ -230,7 +177,7 @@ nav {
 .range {
   font-size: 1.1rem;
   color: #4a4848;
-    text-align: center;
+  text-align: center;
 }
 
 .des-cont {
@@ -271,12 +218,11 @@ nav {
 
 #connect {
   display: flex;
-  justify-content: space-around;
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 20vh;
-  gap: 5%;
+  margin: 0 0 2rem 0;
+  /* height: 20vh; */
 }
 
 .resume {
@@ -285,7 +231,7 @@ nav {
   padding: 12px 9px;
   border-radius: 1rem;
   transition: 0.5s;
-  min-height: 20px
+  min-height: 20px;
 }
 
 .resume:hover {
@@ -294,25 +240,16 @@ nav {
 }
 
 @media (max-width: 1050px) {
-  #title-cont {
-    width: 70vw;
-  }
-  #side-nav-cont {
-    width: 30vw;
-  }
 
   #experience {
-    flex-direction: column; 
-    overflow-x: hidden;  
-    overflow-y: auto; 
-    scroll-snap-type: none;  
+    flex-direction: column;
+    align-items: center;
   }
 
-  #experience > * {
-    scroll-snap-align: none; 
-    margin-right: 0;
-    margin-bottom: 0.5rem; 
-    width: 100%; 
+  #experience > div {
+    width: 70%;
+    margin: 0 0 2rem 0;
+    height: fit-content
   }
 
   #about-me {
@@ -320,22 +257,20 @@ nav {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100;
-    width: 70vw;
-    min-height: auto;
+    height: fit-content;
     gap: 2rem;
     border-radius: 1.2rem;
   }
 
   #image-me {
     width: 450px;
-    max-height: 300px;
+    height: 500px;
+    background-position: center top -35px;
   }
 
   #p-tag {
     margin-top: 5%;
-    width: 450px;
-    height: 40%;
+    width: 85%;
   }
 
   #info-title {
@@ -345,8 +280,15 @@ nav {
   #info {
     font-size: 1rem;
   }
+}
 
-  #project-left{
-    visibility:hidden;
+@media (max-width: 550px) {
+  #image-me {
+    width: 300px;
+    height: 450px;
+  }
+
+  #experience > div {
+    width: 100%
   }
 }
